# TinyPathTracer

./: CMakeLists.txt  README.md
include/: bvh.cuh  camera.h  debug_utils.h  delta_light.h  device_lock.cuh  env_light.cuh  geometry_queries.h  intellisense_cuda.h  material.h  mesh.cuh  path_tracer.h  pathtrace.cuh  picture.h  primitives.h  ray.h  sampler.h  texture.h  transform.h  vertex.h  vkEngine.h  vkInitializers.h
include/math/: mat.h  quat.h  vec.h
input/: ball.gltf  box.gltf  box1.gltf  box2.gltf  light.gltf  square.gltf  tir.gltf
src/: bvh.cu  delta_light.cu  env_light.cu  main.cpp  main.cu  mesh.cu  path_tracer.cu  texture.cu  vkEngine.cu  vkInitializers.cu
